Correct sidebar overflow issues to correct mobile layout and begin About page updates

--- a/client/styles/stationstream.css
+++ b/client/styles/stationstream.css
@@ -5,6 +5,7 @@ body,html,.row-offcanvas {
 
 body {
   padding-top: 50px;
+  overflow-x: hidden;
 }
 
 .navbar-nav {
